--- a/FloatingActionButton/FloatingActionButton/Schedule.storyboard
+++ b/FloatingActionButton/FloatingActionButton/Schedule.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,29 +18,41 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calendar.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="8Wi-az-oNs">
-                                <rect key="frame" x="20" y="64.5" width="40" height="39"/>
+                                <rect key="frame" x="20" y="74.5" width="40" height="39"/>
                                 <color key="tintColor" systemColor="systemRedColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="40" id="7t9-vX-YHH"/>
                                     <constraint firstAttribute="height" constant="40" id="oIi-QC-Bjr"/>
                                 </constraints>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ssb-Qa-mPI">
+                                <rect key="frame" x="345.5" y="74" width="48.5" height="59"/>
+                                <color key="tintColor" systemColor="labelColor"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" imagePlacement="top" title="저장" imagePadding="10">
+                                    <imageReference key="image" image="checkmark" catalog="system" renderingMode="template"/>
+                                    <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="15"/>
+                                    <color key="baseForegroundColor" systemColor="labelColor"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="applyButtonPressed:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="fan-fm-6Ja"/>
+                                </connections>
+                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="일정" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="equ-8c-1qj">
-                                <rect key="frame" x="70" y="64" width="61" height="40"/>
+                                <rect key="frame" x="70" y="74" width="61" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="U9i-fz-aWG"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="35"/>
-                                <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="제목 추가" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="q2K-rR-vGn">
-                                <rect key="frame" x="20" y="124" width="374" height="45.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                <textInputTraits key="textInputTraits"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder=" 제목 추가" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="q2K-rR-vGn">
+                                <rect key="frame" x="20" y="144" width="374" height="31.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="시작 : " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0wb-tG-VKW">
-                                <rect key="frame" x="20" y="189.5" width="49.5" height="30"/>
+                                <rect key="frame" x="20" y="205.5" width="49.5" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="Brt-mw-mip"/>
                                 </constraints>
@@ -48,7 +61,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="compact" translatesAutoresizingMaskIntoConstraints="NO" id="Q8T-pe-7eS">
-                                <rect key="frame" x="69" y="189" width="225" height="30"/>
+                                <rect key="frame" x="69.5" y="205.5" width="225" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="TPt-aG-GxK"/>
                                     <constraint firstAttribute="width" constant="225" id="eiN-x1-2jJ"/>
@@ -59,7 +72,7 @@
                                 </connections>
                             </datePicker>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="종료 : " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aGe-ZB-5uE" userLabel="종료 :">
-                                <rect key="frame" x="20" y="239.5" width="50" height="30"/>
+                                <rect key="frame" x="20" y="245.5" width="50" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="6Wc-e0-1gR"/>
                                 </constraints>
@@ -67,8 +80,8 @@
                                 <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="compact" translatesAutoresizingMaskIntoConstraints="NO" id="Zfz-Pi-9FS">
-                                <rect key="frame" x="70" y="239.5" width="225" height="30"/>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="compact" translatesAutoresizingMaskIntoConstraints="NO" id="Zfz-Pi-9FS">
+                                <rect key="frame" x="70" y="245.5" width="225" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="FQd-jE-2gz"/>
                                     <constraint firstAttribute="width" constant="225" id="mbm-gT-68a"/>
@@ -78,28 +91,41 @@
                                     <action selector="changeExitDate:" destination="Y6W-OH-hqX" eventType="valueChanged" id="LoA-Sd-rZg"/>
                                 </connections>
                             </datePicker>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder=" 메모" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="OOa-cg-PCb">
+                                <rect key="frame" x="20" y="305.5" width="374" height="22"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" systemColor="systemGroupedBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="8Wi-az-oNs" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="1IN-c1-i2F"/>
-                            <constraint firstItem="q2K-rR-vGn" firstAttribute="top" secondItem="equ-8c-1qj" secondAttribute="bottom" constant="20" id="5tF-Xj-zoJ"/>
-                            <constraint firstItem="0wb-tG-VKW" firstAttribute="top" secondItem="q2K-rR-vGn" secondAttribute="bottom" constant="20" id="8V5-Sd-yyj"/>
-                            <constraint firstItem="aGe-ZB-5uE" firstAttribute="top" secondItem="0wb-tG-VKW" secondAttribute="bottom" constant="20" id="EoP-Bu-3j9"/>
+                            <constraint firstItem="q2K-rR-vGn" firstAttribute="top" secondItem="equ-8c-1qj" secondAttribute="bottom" constant="30" id="5tF-Xj-zoJ"/>
+                            <constraint firstItem="Ssb-Qa-mPI" firstAttribute="top" secondItem="8Wi-az-oNs" secondAttribute="top" id="6ET-qj-qBh"/>
+                            <constraint firstItem="0wb-tG-VKW" firstAttribute="top" secondItem="q2K-rR-vGn" secondAttribute="bottom" constant="30" id="8V5-Sd-yyj"/>
+                            <constraint firstItem="aGe-ZB-5uE" firstAttribute="top" secondItem="0wb-tG-VKW" secondAttribute="bottom" constant="10" id="EoP-Bu-3j9"/>
                             <constraint firstItem="equ-8c-1qj" firstAttribute="top" secondItem="8Wi-az-oNs" secondAttribute="top" id="KaE-Hd-5R9"/>
                             <constraint firstItem="equ-8c-1qj" firstAttribute="leading" secondItem="8Wi-az-oNs" secondAttribute="trailing" constant="10" id="OSK-8M-KPu"/>
+                            <constraint firstItem="OOa-cg-PCb" firstAttribute="trailing" secondItem="q2K-rR-vGn" secondAttribute="trailing" id="RGA-TJ-ug2"/>
                             <constraint firstItem="Zfz-Pi-9FS" firstAttribute="leading" secondItem="aGe-ZB-5uE" secondAttribute="trailing" id="Tnj-tb-a7F"/>
                             <constraint firstItem="aGe-ZB-5uE" firstAttribute="leading" secondItem="0wb-tG-VKW" secondAttribute="leading" id="Udo-cN-MDU"/>
                             <constraint firstItem="0wb-tG-VKW" firstAttribute="leading" secondItem="q2K-rR-vGn" secondAttribute="leading" id="VQl-l4-LXM"/>
                             <constraint firstItem="Q8T-pe-7eS" firstAttribute="leading" secondItem="0wb-tG-VKW" secondAttribute="trailing" id="fZn-2E-87l"/>
-                            <constraint firstItem="8Wi-az-oNs" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="20" id="ffg-29-PYC"/>
+                            <constraint firstItem="8Wi-az-oNs" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="30" id="ffg-29-PYC"/>
+                            <constraint firstItem="OOa-cg-PCb" firstAttribute="leading" secondItem="aGe-ZB-5uE" secondAttribute="leading" id="mjc-hG-eqH"/>
                             <constraint firstItem="Q8T-pe-7eS" firstAttribute="top" secondItem="0wb-tG-VKW" secondAttribute="top" id="rEy-Bf-2OI"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Ssb-Qa-mPI" secondAttribute="trailing" constant="20" id="srT-oq-Wjk"/>
+                            <constraint firstItem="OOa-cg-PCb" firstAttribute="top" secondItem="aGe-ZB-5uE" secondAttribute="bottom" constant="30" id="vMM-2R-iwr"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="q2K-rR-vGn" secondAttribute="trailing" constant="20" id="xlQ-0E-IOU"/>
                             <constraint firstItem="Zfz-Pi-9FS" firstAttribute="top" secondItem="aGe-ZB-5uE" secondAttribute="top" id="yJ5-PI-PX7"/>
                             <constraint firstItem="q2K-rR-vGn" firstAttribute="leading" secondItem="8Wi-az-oNs" secondAttribute="leading" id="zBy-Mn-MkB"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="applyButton" destination="Ssb-Qa-mPI" id="guP-B8-DcK"/>
+                        <outlet property="exitDatePicker" destination="Zfz-Pi-9FS" id="TYN-ec-xBK"/>
+                        <outlet property="memoLabel" destination="OOa-cg-PCb" id="ng2-lh-Pj7"/>
                         <outlet property="titleLabel" destination="q2K-rR-vGn" id="BZa-qN-Mfl"/>
                     </connections>
                 </viewController>
@@ -110,6 +136,13 @@
     </scenes>
     <resources>
         <image name="calendar.circle.fill" catalog="system" width="128" height="121"/>
+        <image name="checkmark" catalog="system" width="128" height="114"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGroupedBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemRedColor">
             <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
