--- a/FloatingActionButton/FloatingActionButton/Todo.storyboard
+++ b/FloatingActionButton/FloatingActionButton/Todo.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -16,20 +17,84 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is TODO" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pBE-G1-jkM">
-                                <rect key="frame" x="157" y="442.5" width="100.5" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="cbx-MD-VyW">
+                                <rect key="frame" x="20" y="74.5" width="40" height="39"/>
+                                <color key="tintColor" systemColor="systemYellowColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="YBf-vj-n2Q"/>
+                                    <constraint firstAttribute="width" constant="40" id="vhH-g9-zL9"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="할 일" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TtP-Yk-dix">
+                                <rect key="frame" x="70" y="74" width="68" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Ygx-X0-FaO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="35"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dni-jW-PVk">
+                                <rect key="frame" x="345.5" y="74" width="48.5" height="59"/>
+                                <color key="tintColor" systemColor="labelColor"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" imagePlacement="top" title="저장" imagePadding="10">
+                                    <imageReference key="image" image="checkmark" catalog="system" renderingMode="template"/>
+                                    <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="15"/>
+                                    <color key="baseForegroundColor" systemColor="labelColor"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="applyButtonPressed:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="AhG-Pj-ovG"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder=" 할 일 추가" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="UP6-NW-DHx">
+                                <rect key="frame" x="20" y="144" width="374" height="31.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="날짜 : " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ua1-h0-t8W">
+                                <rect key="frame" x="20" y="205.5" width="49.5" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="sez-qF-wk8"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" datePickerMode="date" style="compact" translatesAutoresizingMaskIntoConstraints="NO" id="J9S-kw-38z">
+                                <rect key="frame" x="69.5" y="205.5" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="bwV-12-Mpl"/>
+                                    <constraint firstAttribute="width" constant="100" id="q9b-ka-5P4"/>
+                                </constraints>
+                                <locale key="locale" localeIdentifier="ko"/>
+                                <connections>
+                                    <action selector="changeTodoDate:" destination="Y6W-OH-hqX" eventType="valueChanged" id="hcB-Nd-CaZ"/>
+                                </connections>
+                            </datePicker>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="pBE-G1-jkM" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="EOB-Pe-W8P"/>
-                            <constraint firstItem="pBE-G1-jkM" firstAttribute="centerY" secondItem="vDu-zF-Fre" secondAttribute="centerY" id="yXz-TU-utY"/>
+                            <constraint firstItem="UP6-NW-DHx" firstAttribute="top" secondItem="cbx-MD-VyW" secondAttribute="bottom" constant="30" id="6HR-cR-rZo"/>
+                            <constraint firstItem="J9S-kw-38z" firstAttribute="leading" secondItem="ua1-h0-t8W" secondAttribute="trailing" id="7V1-Cc-PGd"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="dni-jW-PVk" secondAttribute="trailing" constant="20" id="7Vn-cS-YBP"/>
+                            <constraint firstItem="cbx-MD-VyW" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="30" id="8PE-xp-zmA"/>
+                            <constraint firstItem="dni-jW-PVk" firstAttribute="top" secondItem="cbx-MD-VyW" secondAttribute="top" id="IoZ-bU-cTp"/>
+                            <constraint firstItem="cbx-MD-VyW" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="JSL-y4-YP5"/>
+                            <constraint firstItem="J9S-kw-38z" firstAttribute="top" secondItem="ua1-h0-t8W" secondAttribute="top" id="KoO-F8-uyM"/>
+                            <constraint firstItem="UP6-NW-DHx" firstAttribute="leading" secondItem="cbx-MD-VyW" secondAttribute="leading" id="NL6-71-oqL"/>
+                            <constraint firstItem="TtP-Yk-dix" firstAttribute="top" secondItem="cbx-MD-VyW" secondAttribute="top" id="bH8-ep-Rtc"/>
+                            <constraint firstItem="ua1-h0-t8W" firstAttribute="top" secondItem="UP6-NW-DHx" secondAttribute="bottom" constant="30" id="m2b-uh-wy4"/>
+                            <constraint firstItem="ua1-h0-t8W" firstAttribute="leading" secondItem="UP6-NW-DHx" secondAttribute="leading" id="n4o-1l-37J"/>
+                            <constraint firstItem="UP6-NW-DHx" firstAttribute="trailing" secondItem="dni-jW-PVk" secondAttribute="trailing" id="p3R-ze-9w6"/>
+                            <constraint firstItem="TtP-Yk-dix" firstAttribute="leading" secondItem="cbx-MD-VyW" secondAttribute="trailing" constant="10" id="qoG-YN-Xz8"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="applyButton" destination="dni-jW-PVk" id="9Kc-03-e1A"/>
+                        <outlet property="titleLabel" destination="UP6-NW-DHx" id="6tq-oz-Z9y"/>
+                        <outlet property="todoDatePicker" destination="J9S-kw-38z" id="LLy-Gg-bM3"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -37,8 +102,16 @@
         </scene>
     </scenes>
     <resources>
+        <image name="checkmark" catalog="system" width="128" height="114"/>
+        <image name="checkmark.circle.fill" catalog="system" width="128" height="121"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
